force-app/main/default/objects/OrderItem/fields/netsuite_conn__Celigo_Discount_Applied_In_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Celigo_Discount_Applied_In_NetSuite__c</fullName>
    <label>Discount Applied in NetSuite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>