force-app/main/default/objects/OrderItem/fields/netsuite_conn__NetSuite_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Item_Id__c</fullName>
    <label>NetSuite Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>