force-app/main/default/objects/OrderItem/fields/Netsuite_RMA_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_RMA_ID__c</fullName>
    <label>Netsuite RMA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>