force-app/main/default/objects/OrderItem/fields/ns_creditmemo_id__c.field-meta.xml
<CustomField>
    <fullName>ns_creditmemo_id__c</fullName>
    <label>NS CreditMemo Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>