force-app/main/default/objects/OrderItem/fields/ns_integration_error__c.field-meta.xml
<CustomField>
    <fullName>ns_integration_error__c</fullName>
    <label>NS Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>